@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012 SUSE LLC
+ * Copyright (c) 2012--2025 SUSE LLC
  *
  * This software is licensed to you under the GNU General Public License,
  * version 2 (GPLv2). There is NO WARRANTY for this software, express or
@@ -7,10 +7,6 @@
  * FOR A PARTICULAR PURPOSE. You should have received a copy of GPLv2
  * along with this software; if not, see
  * http://www.gnu.org/licenses/old-licenses/gpl-2.0.txt.
- *
- * Red Hat trademarks are not licensed under GPLv2. No permission is
- * granted to use or replicate Red Hat trademarks that are incorporated
- * in this software or its documentation.
  */
 
 package com.redhat.rhn.domain.credentials;
@@ -23,6 +19,7 @@ import org.apache.logging.log4j.Logger;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
@@ -93,6 +90,17 @@ public class CredentialsFactory extends HibernateFactory {
     }
 
     /**
+     * Helper method for creating new Hub SCC {@link Credentials}
+     * @param username the username
+     * @param password the password that will be BASE64 encoded
+     * @param fqdn the FQDN of the peripheral server that will use this credentials
+     * @return new credential with type SCC
+     */
+    public static HubSCCCredentials createHubSCCCredentials(String username, String password, String fqdn) {
+        return new HubSCCCredentials(username, password, fqdn);
+    }
+
+    /**
      * Helper method for creating new Virtual Host Manager {@link Credentials}
      * @param username the username
      * @param password the password that will be BASE64 encoded
@@ -156,7 +164,7 @@ public class CredentialsFactory extends HibernateFactory {
             .createQuery(query)
             .stream()
             .map(Credentials.class::cast)
-            .toList();
+            .collect(Collectors.toList());
     }
 
     /**
