@@ -33,6 +33,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -79,7 +80,7 @@ public class ListRemoveGroupsAction extends BaseListAction<ManagedServerGroup> {
         List<ManagedServerGroup> groups = key.getServerGroups().stream()
                 .filter(g -> g instanceof ManagedServerGroup)
                 .map(g -> (ManagedServerGroup)g)
-                .toList();
+                .collect(Collectors.toList());
         AddGroupsAction.setupAccessMap(context, groups);
         return groups;
     }
