@@ -28,6 +28,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * ScheduleRepoSyncAction
@@ -62,7 +63,7 @@ public class ScheduleRepoSyncAction implements MessageAction {
 
             List<Channel> channels = channelLabels.stream()
                 .map(label -> ChannelManager.lookupByLabel(org, label))
-                .toList();
+                .collect(Collectors.toList());
 
             try {
                 new TaskomaticApi().scheduleSingleRepoSync(channels);
