@@ -50,6 +50,7 @@ import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 /**
  * ServerGroupHandler
@@ -608,7 +609,7 @@ public class ServerGroupHandler extends BaseHandler {
         List<ConfigChannel> channels = configChannelLabels.stream()
             .map(l -> Optional.ofNullable(manager.lookupGlobalConfigChannel(loggedInUser, l))
                     .orElseThrow(() -> new NoSuchChannelException(l)))
-            .toList();
+            .collect(Collectors.toList());
 
         group.subscribeConfigChannels(channels, loggedInUser);
         return 1;
@@ -638,7 +639,7 @@ public class ServerGroupHandler extends BaseHandler {
         List<ConfigChannel> channels = configChannelLabels.stream()
             .map(l -> Optional.ofNullable(manager.lookupGlobalConfigChannel(loggedInUser, l))
                     .orElseThrow(() -> new NoSuchChannelException(l)))
-            .toList();
+            .collect(Collectors.toList());
 
         group.unsubscribeConfigChannels(channels, loggedInUser);
         return 1;
@@ -667,6 +668,6 @@ public class ServerGroupHandler extends BaseHandler {
 
         List<Formula> formulas = FormulaFactory.listFormulas();
         List<String> assigned = FormulaFactory.getFormulasByGroup(group);
-        return formulas.stream().filter(f -> assigned.contains(f.getName())).toList();
+        return formulas.stream().filter(f -> assigned.contains(f.getName())).collect(Collectors.toList());
     }
 }
