@@ -59,6 +59,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 // TODO: Test for when patch status is unknown
 public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
@@ -87,7 +88,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -122,7 +123,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -156,7 +157,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -194,7 +195,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -229,7 +230,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -272,7 +273,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -314,7 +315,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -361,7 +362,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         HibernateFactory.getSession().flush();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -411,7 +412,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         HibernateFactory.getSession().flush();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -453,7 +454,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
@@ -486,7 +487,7 @@ public class CVEAuditManagerOVALTest extends RhnBaseTestCase {
         CVEAuditManager.populateCVEChannels();
 
         List<CVEAuditManager.CVEPatchStatus> results = CVEAuditManager.listSystemsByPatchStatus(user, cve.getName())
-                .toList();
+                .collect(Collectors.toList());
 
         CVEAuditSystemBuilder systemAuditResult = CVEAuditManagerOVAL.doAuditSystem(cve.getName(), results, server);
 
