@@ -32,6 +32,7 @@ import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * KickstartLocaleCommand - for editing locale-related options
@@ -123,7 +124,7 @@ public class KickstartLocaleCommand extends BaseKickstartCommand {
             row.put("display", dto.getName());
             row.put("value", dto.getLabel());
             return row;
-        }).toList();
+        }).collect(Collectors.toList());
     }
 
     /**
