@@ -57,6 +57,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import spark.Request;
@@ -112,11 +113,11 @@ public class SsmController {
                 compatibles.stream().map(cc ->
                         new SsmChannelDto(
                                 cc.getId(), cc.getName(), cc.isCustom()))
-                        .toList());
+                        .collect(Collectors.toList()));
             List<Server> serversByChannel = SsmManager.findServersInSetByChannel(user, c.getId());
             allowedBaseJson.setServers(serversByChannel.stream()
                     .map(s -> new SsmServerDto(s.getId(), s.getName()))
-                    .toList());
+                    .collect(Collectors.toList()));
             result.add(allowedBaseJson);
         }
 
@@ -147,11 +148,11 @@ public class SsmController {
                         ChannelFactory.listCompatibleBasesForSSMNoBaseInNullOrg(user).stream())
                         .map(c ->
                             new SsmChannelDto(c.getId(), c.getName(), c.isCustom()))
-                        .toList();
+                        .collect(Collectors.toList());
             rslt.setAllowedBaseChannels(allowed);
             rslt.setServers(noBase.stream()
                     .map(s -> new SsmServerDto(s.getId(), s.getName()))
-                    .toList());
+                    .collect(Collectors.toList()));
             return Optional.of(rslt);
 
         }
