@@ -55,6 +55,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TimeZone;
+import java.util.stream.Collectors;
 
 import spark.ModelAndView;
 import spark.Request;
@@ -150,7 +151,7 @@ public class AppStreamsController {
                     AppStreamsManager.listChannelAppStreams(channel.getId()),
                     server::hasAppStreamModuleEnabled
                 ))
-                .toList();
+                .collect(Collectors.toList());
         data.put("channelsAppStreams", GSON.toJson(channelsAppStreams));
         data.put("actionChains", ActionChainHelper.actionChainsJson(user));
         return new ModelAndView(data, "templates/minion/appstreams.jade");
@@ -182,7 +183,7 @@ public class AppStreamsController {
             List<PackageJson> sortedPackages = appStream.getArtifacts()
                 .stream()
                 .map(PackageJson::new)
-                .toList();
+                .collect(Collectors.toList());
             artifacts.put("packages", sortedPackages);
             return result(res, success(artifacts), new TypeToken<>() { });
         }
