@@ -153,7 +153,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p64 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
@@ -199,7 +199,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p64 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
@@ -244,7 +244,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         SystemManager.subscribeServerToChannel(user, testMinionServer, channel);
@@ -296,7 +296,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p = ErrataTestUtils.createTestPackage(user, channel, "amd64-deb");
@@ -340,7 +340,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinionServer);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p1 = ErrataTestUtils.createTestPackage(user, channel, "amd64-deb");
@@ -398,7 +398,7 @@ public class SaltServerActionServiceTest extends JMockBaseTestCaseWithUser {
         mins.add(testMinion);
 
         List<MinionSummary> minionSummaries = mins.stream().
-                map(MinionSummary::new).toList();
+                map(MinionSummary::new).collect(Collectors.toList());
 
         Channel channel = ChannelFactoryTest.createTestChannel(user);
         Package p1 = ErrataTestUtils.createTestPackage(user, channel, "x86_64");
