@@ -35,6 +35,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 /**
  * This class is responsible for cleaning OVAL resources and filling up missing data. It acts as an adapter that takes
@@ -105,7 +106,7 @@ public class OVALCleaner {
                                     }
 
                                     return "";
-                                }).filter(StringUtils::isNotBlank).toList();
+                                }).filter(StringUtils::isNotBlank).collect(Collectors.toList());
                 definition.setCves(cves);
                 break;
             case DEBIAN:
@@ -116,7 +117,7 @@ public class OVALCleaner {
         }
 
         List<String> cleanCves = definition.getCves().stream().map(OVALCleaner::removeWhitespaceChars)
-                .toList();
+                .collect(Collectors.toList());
 
         definition.setCves(cleanCves);
     }
