@@ -46,6 +46,7 @@ import com.suse.manager.webui.services.test.TestSaltApi;
 import com.suse.scc.SCCSystemRegistrationManager;
 import com.suse.scc.client.SCCClient;
 import com.suse.scc.client.SCCConfig;
+import com.suse.scc.client.SCCConfigBuilder;
 import com.suse.scc.client.SCCWebClient;
 import com.suse.scc.model.SCCOrganizationSystemsUpdateResponse;
 import com.suse.scc.model.SCCRegisterSystemJson;
@@ -62,6 +63,7 @@ import java.nio.file.Path;
 import java.util.Date;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 /**
  * Tests for {@link SCCClient} methods.
@@ -79,8 +81,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         serverInfo.setCheckin(new Date(0)); // 1970-01-01 00:00:00 UTC
         testSystem.setServerInfo(serverInfo);
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig) {
             @Override
             public SCCOrganizationSystemsUpdateResponse createUpdateSystems(
                     List<SCCRegisterSystemJson> systems, String username, String password) {
@@ -94,7 +101,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -111,7 +118,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -160,8 +167,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         testSystem.setServerInfo(serverInfo);
         testSystem.setPayg(true);
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid"));
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig);
 
         SCCSystemRegistrationManager sccSystemRegistrationManager = new SCCSystemRegistrationManager(sccWebClient);
         SCCCachingFactory.initNewSystemsToForward();
@@ -169,7 +181,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
 
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         CredentialsFactory.storeCredentials(credentials);
@@ -190,8 +202,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         serverInfo.setCheckin(new Date(0)); // 1970-01-01 00:00:00 UTC
         testSystem.setServerInfo(serverInfo);
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig) {
             @Override
             public SCCOrganizationSystemsUpdateResponse createUpdateSystems(
                     List<SCCRegisterSystemJson> systems, String username, String password) {
@@ -205,7 +222,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -229,7 +246,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().equals(testSystem))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -266,9 +283,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
             }
 
         }
-
-        TestSCCWebClient sccWebClient = new TestSCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        TestSCCWebClient sccWebClient = new TestSCCWebClient(sccConfig) {
             @Override
             public SCCOrganizationSystemsUpdateResponse createUpdateSystems(
                     List<SCCRegisterSystemJson> systems, String username, String password) {
@@ -277,7 +298,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                 .map(system ->
                                         new SCCSystemCredentialsJson(system.getLogin(), system.getPassword(), 12345L)
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -299,7 +320,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         List<SCCRegCacheItem> allUnregistered = SCCCachingFactory.findSystemsToForwardRegistration();
         List<SCCRegCacheItem> testSystems = allUnregistered.stream()
                 .filter(i -> i.getOptServer().get().getServerInfo().getCheckin().equals(new Date(0)))
-                .toList();
+                .collect(Collectors.toList());
         SCCCredentials credentials = CredentialsFactory.createSCCCredentials("username", "password");
         credentials.setUrl("https://scc.suse.com");
         CredentialsFactory.storeCredentials(credentials);
@@ -329,8 +350,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         host.getGuests().stream()
                 .forEach(vi -> vi.setType(VirtualInstanceFactory.getInstance().getVirtualInstanceType("qemu")));
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig) {
 
 
             @Override
@@ -346,7 +372,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -414,8 +440,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         host.getGuests().stream()
                 .forEach(vi -> vi.setType(VirtualInstanceFactory.getInstance().getVirtualInstanceType("vmware")));
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig) {
 
 
             @Override
@@ -430,7 +461,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
@@ -513,8 +544,13 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
         host.getGuests().stream()
                 .forEach(vi -> vi.setType(VirtualInstanceFactory.getInstance().getVirtualInstanceType("aws_nitro")));
 
-        SCCWebClient sccWebClient = new SCCWebClient(new SCCConfig(
-                new URI("https://localhost"), "username", "password", "uuid")) {
+        SCCConfig sccConfig = new SCCConfigBuilder()
+                .setUrl(new URI("https://localhost"))
+                .setUsername("username")
+                .setPassword("password")
+                .setUuid("uuid")
+                .createSCCConfig();
+        SCCWebClient sccWebClient = new SCCWebClient(sccConfig) {
 
 
             @Override
@@ -529,7 +565,7 @@ public class SCCSystemRegistrationManagerTest extends BaseTestCaseWithUser {
                                         system.getPassword(),
                                         new Random().nextLong())
                                 )
-                                .toList()
+                                .collect(Collectors.toList())
                 );
             }
 
